test/functions/iterators/errors/iterator-.type.good
iterator-.type.chpl:9: error: .type is not supported for this kind of expression
iterator-.type.chpl:12: error: .type is not supported for this kind of expression
